# mnemo.md

./: .gitignore  README.md  download_front_libs.sh  index.html  main.py  pyproject.toml  requirements.txt  script.js
.github/workflows/: release.yml
frontend/: index.html  script.js
scripts/: download_front_libs.sh  make_deb.sh
src/mnemo/: main.py
