[project]
name = "mnemo"
version = "1.0"
description = "An elegant Markdown editor with real-time preview and PDF export."
readme = "README.md"
authors = [
    { name = "Thiago", email = "thiago@ufrn.edu.br" }
]
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.5",
    "pdfkit>=1.0.0",
    "pygobject>=3.42.0; sys_platform == 'linux'",
    "pywebview>=5.0",
]

[project.scripts]
mnemo = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "main.py",
    "index.html",
    "script.js",
    "libs/",
    "README.md"
]

[tool.uv]
managed = true